--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -13,6 +13,7 @@
 </div>    
 
 <form method="post" action="/contact" novalidate>
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <div class="form-field <%= errors.message ? 'form-field-invalid' : '' %>">
         <label for="message">Message</label>
         <textarea class="input" id="message" name="message" rows="4" autofocus><%= data.message %></textarea>
